[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "beautifulsoup4>=4.14.3",
    "duckduckgo-search>=8.1.1",
    "elevenlabs>=2.28.0",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.1",
    "langchain-community>=0.4.1",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
]
